RESOLVED FIXED51669
gcc compile error 'control reaches end of non-void function' with some option
https://bugs.webkit.org/show_bug.cgi?id=51669
Summary gcc compile error 'control reaches end of non-void function' with some option
Takashi Toyoshima
Reported 2010-12-27 23:29:33 PST
gcc detects 'control reaches end of non-void function' error in case of using '-finstrument-functions' option. This problem appears in a debug configuration with heap leak checker of chromium. (http://codereview.chromium.org/5991005/)
Attachments
Patch (2.53 KB, patch)
2010-12-27 23:41 PST, Takashi Toyoshima
no flags
Takashi Toyoshima
Comment 1 2010-12-27 23:41:56 PST
Alexey Proskuryakov
Comment 2 2010-12-28 11:43:03 PST
Looks like a gcc bug. Which gcc version are you seeing this with?
Eric Seidel (no email)
Comment 3 2010-12-28 13:51:37 PST
Comment on attachment 77540 [details] Patch OK.
WebKit Commit Bot
Comment 4 2010-12-28 14:14:51 PST
Comment on attachment 77540 [details] Patch Clearing flags on attachment: 77540 Committed r74725: <http://trac.webkit.org/changeset/74725>
WebKit Commit Bot
Comment 5 2010-12-28 14:14:57 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.