2010-12-28  Takashi Toyoshima  <toyoshim@google.com>

Reviewed by Eric Seidel.

        gcc detected 'control reaches end of non-void function' with
        -finstrument-functions option.
        https://bugs.webkit.org/show_bug.cgi?id=51669

        No new tests. These fixes are trivial.

        * dom/Element.cpp:
        (WebCore::Element::childTypeAllowed):
        * inspector/InspectorResourceAgent.cpp:
        (WebCore::cachedResourceTypeString):

Canonical link: https://commits.webkit.org/65064@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@74725 268f45cc-cd09-0410-ab3c-d52691b4dbfc